test/shared/mdapioutput/objects/Account.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>BirthCity__c</fullName>
        <label>BirthCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BirthCountryCode__c</fullName>
        <label>BirthCountryCode</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BirthPostalCode__c</fullName>
        <label>BirthPostalCode</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProfessionCode__c</fullName>
        <description>Each profession has an associated code.</description>
        <label>Profession Code</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfessionLabel__c</fullName>
        <label>Profession Label</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Distributor</fullName>
        <active>true</active>
        <description>Distributor for Insurance Policies</description>
        <label>Distributor</label>
    </recordTypes>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>